# computer_graphics_OpenGL

./: github  github.pub
Bilateral_Mesh_Denoising/: CMakeLists.txt  tpSubdiv
Bilateral_Mesh_Denoising/data/: bunny10k.off
Bilateral_Mesh_Denoising/src/: Mesh.cpp  Mesh.h  main.cpp  vertexShader.glsl  vertexShaderShadowMap.glsl
Remeshing/TP_Subdiv_Senna-Benatti/: Mesh.h
Remeshing/src/: Mesh.cpp  fragmentShader.glsl  fragmentShaderShadowMap.glsl  main.cpp
RigidBodySim/: CMakeLists.txt
RigidBodySim/RigidSim-Benatti-Rafael/: Quaternion.hpp
RigidBodySim/src/: Matrix3x3.hpp  RigidSolver.hpp  Vector3.hpp  main.cpp  typedefs.hpp
ShadowMapping/: CMakeLists.txt
ShadowMapping/src/: Mesh.cpp  Mesh.h  ShaderProgram.h  fragmentShader.glsl  fragmentShaderShadowMap.glsl  main.cpp  vertexShader.glsl  vertexShaderShadowMap.glsl
solarSystem/src/: fragmentShader.glsl  main.cpp  vertexShader.glsl
solarSystem/src/dep/glfw/: Télécom Paris - Atalho.lnk
